feat: delete endpoint
